--- a/html/products.html
+++ b/html/products.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
             <div class="container">
               <a class="navbar-brand" href="../index.html">
-                <img src="/assets/banner.png" alt="Bootstrap" width="400" height="150">
+                <img src="./assets/banner.png" alt="Bootstrap" width="400" height="150">
               </a>
             </div>  
         </nav>
