--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="row justify-content-center">
         <h1 class="h1-index col-md-8 col-sm 3 text-align-center h1-index">Bienvenidos a una nueva experiencia</h1>
       </div>
-      <div id="carouselExampleCaptions" class="carousel slide d-flex justify-content-center">
+      <div id="carouselExampleCaptions" class="carousel slide d-flex justify-content-center" style="padding-bottom: 50px;">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -57,7 +57,9 @@
         </div>
         <div class="carousel-inner w-50">
           <div class="carousel-item active">
+            <div>
             <img src="./assets/basic.png" class="d-block w-100" alt="cokpit-basic">
+            </div>
             <div class="carousel-caption d-none d-md-block">
               <h5>Modelo BASIC</h5>
               <p>Nuestro modelo <b>BASIC</b> esta construido con perfiles de aluminio tipo bosh lo
