--- a/html/about-us.html
+++ b/html/about-us.html
@@ -19,7 +19,7 @@
 <body>
     
     <header class="fm__header-container">
-        <nav class="navbar navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
+        <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
             <div class="container">
               <a class="navbar-brand" href="../index.html">
                 <img src="../assets/banner.png" alt="Bootstrap" width="400" height="150">
@@ -38,7 +38,7 @@
                   <a class="nav-link" href="./products.html">Productos</a>
                   <a class="nav-link" href="./faq.html">FAQ</a>
                   <a class="nav-link" href="./contact.html">Contacto</a>
-                  <a class="nav-link" href="./about-us.html">Nosotros</a>
+                  <a class="nav-link" href="../about-us.html">Nosotros</a>
                 </div>
               </div>
             </div>
@@ -47,41 +47,61 @@
 
     <main>
 
-        <h1 class="fm__h1-main">Nuestros Cockpits</h1>
-        <div class="container-fluid">
-          <div class="row justify-content-around"> <!-- agregue justify para poder ubicar las cards -->
-            <div class=" fm__cards col-md-3 col-sm-12 m-2"> <!-- "fm_" clases personales-->
-              <div class="card-img">
-                <img src="../assets/basic.png" alt="cockpit-basic">
-              </div>
-              <div class="fm__card__description">
-                <h2>BASIC</h2>
-                <P>Nuestro modelo <b>BASIC</b> esta construido con perfiles de aluminio tipo bosh lo
-                  que le da al conjunto una gran resistencia. Las columanas centrales son de perfiles 4080 mientras que el resto es de 4040.</P>
-              </div>
-            </div>
-            <div class="fm__cards col-md-3 col-sm-12 m-2">
-              <div class="card-img">
-                <img src="../assets/cockpit - pro.png" alt="cockpit-pro">
-              </div>
-              <div class="fm__card__description">
-                <h2>PRO</h2>
-                <P>El modelo <b>PRO</b> a diferencia del basic esta construido enteramente con
-                  perfiles 4080. Pensado para bases direct drive de muchos NM y potencia.</P>
-              </div>
-            </div>
-            <div class="fm__cards col-md-3 col-sm-12 m-2">
-              <div class="card-img">
-                <img src="../assets/gt-pro.png" alt="cockpit-gtpro">
-              </div>
-              <div class="fm__card__description">
-                <h2>GT-PRO</h2>
-                <P>Nuestro producto mas completo, el <b>Hibryd-PRO</b>. Un conjunto robusto,
-                  totalmente regulable en altura, distancia y en inclinacion. Podes elegir configurarlo tipo GT o Formula, de alli su nomenclaura.</P>
-              </div>
-            </div>
-          </div>
+      <div class="container fm__us-container">
+        <div class="fm__h1-main">
+          <h1>BIENVENIDOS a MONBRO!</h1>
         </div>
+        <section class="fm__us-container__section">
+          <article class="fm__us-container__section__article p-3">
+            <div class="fm__us-container__section__article--text">
+                <h2> NOSOTROS</h2>
+                <br>
+                <p>Bienvenidos a <b>MONBRO</b>, donde la pasión por la <strong>simulación</strong> y la velocidad se
+                    combinan para ofrecerte el cockpit definitivo.
+                    Fundado en noviembre de 2020 por dos hermanos con una visión compartida, <b>MONBRO</b> tiene su
+                    sede en la Ciudad Autónoma de Buenos Aires (CABA), Argentina.
+                </p>
+            </div>
+            <div class="fm__us-container__section__article--text">
+                <br>
+                <p>Nuestra historia comienza con una idea simple pero poderosa: Diseñar y fabricar <strong>cockpits
+                        de aluminio</strong> de la más alta calidad pero al mismo
+                    tiempo accesibles, diseñados para satisfacer las necesidades de los entusiastas de la
+                    <strong>simulación de vuelo y de conducción</strong>. Impulsados por nuestra pasión, nos
+                    embarcamos en este emocionante viaje para ofrecer productos que fusionan la precisión técnica
+                    con la artesanía.
+                </p>
+            </div>
+            <div class="fm__us-container__section__article--text">
+                <br>
+                <p>En <b>MONBRO</b>, cada uno de nuestros cockpits es cuidadosamente elaborado con <strong>perfiles
+                        de Aluminio tipo Bosh</strong>. Desde el diseño inicial hasta el
+                    ensamblaje final, nos esforzamos por superar las expectativas de nuestros clientes en términos
+                    de <b>durabilidad, modularidad, universalidad, funcionalidad y estilo.</b>
+                </p>
+            </div>
+            <div class="fm__us-container__section__article--text">
+                <br>
+                <p>Nuestro compromiso con la excelencia se extiende más allá de nuestros productos. Valoramos
+                    profundamente la satisfacción del cliente y nos esforzamos por ofrecer un
+                    servicio personalizado y atento en cada paso del proceso. Ya sea que seas un entusiasta
+                    experimentado o un recién llegado al mundo de la simulación, estamos aquí para ayudarte
+                    a encontrar el cockpit perfecto para tus necesidades.
+                </p>
+            </div>
+            <div class="fm__us-container__section__article--text">
+                <br>
+                <p>Únete a nosotros en nuestra misión de hacer crecer este hermoso hobbie. Descubre la diferencia
+                    que MONBRO puede ofrecerte a la hora de competir
+                </p>
+            </div>
+            <div class="fm__us-container__section__article--text2">
+                <br><br>
+                <p><b>Gracias por ser parte de esta historia!</b></p>
+            </div>
+          </article>
+        </section>
+      </div>
         
     </main>
 
