--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   
-    <header class="header__container">
+    <header class="fm__header-container">
         <nav class="navbar navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
             <div class="container">
               <a class="navbar-brand" href="./index.html">
@@ -35,9 +35,9 @@
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                   <a class="nav-link" href="./html/products.html">Productos</a>
-                  <a class="nav-link" href="#">FAQ</a>
-                  <a class="nav-link" href="#">Contacto</a>
-                  <a class="nav-link" href="#">Nosotros</a>
+                  <a class="nav-link" href="./html/faq.html">FAQ</a>
+                  <a class="nav-link" href="./html/contact.html">Contacto</a>
+                  <a class="nav-link" href="./html/about-us.html">Nosotros</a>
                 </div>
               </div>
             </div>
@@ -47,9 +47,9 @@
     <main>
       <div class="container-fluid">
         <div class="row justify-content-center">
-        <h1 class="h1-index col-md-8 col-sm 3 text-align-center h1-index">Bienvenidos a una nueva experiencia</h1>
+        <h1 class="fm__h1-main col-md-8 col-sm 3 text-align-center m-5">Bienvenidos a una nueva experiencia</h1> <!-- "fm__" clase personal-->
       </div>
-      <div id="carouselExampleCaptions" class="carousel slide d-flex justify-content-center" style="padding-bottom: 50px;">
+      <div id="carouselExampleCaptions" class="carousel slide d-flex justify-content-center" style="padding-bottom: 100px;">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -95,22 +95,26 @@
     </main>
     
     <footer>
-      <div class="footer-container d-flex flex-wrap justify-content-center align-items-center">
-        <div class="footer-element footer-mail">
-        <h2>E-MAIL</h2>
-            <a href="mailto:monbrosimracing@mail.com">monbrosimracing@gmail.com</a>
+      <div class="container-fluid fm__footer__container">
+        <div class="row">
+          <div class="fm__footer__container__email col-md-4 mb-4 d-flex flex-column align-items-center">
+            <h2>E-MAIL</h2>
+            <a href="mailto:monbrosimracing@mail.com" class="text-light">monbrosimracing@gmail.com</a>
+          </div>
+          <div class="fm__footer__container__links col-md-4 mb-4 d-flex flex-column align-items-center">
+            <h2>LINKS</h2>
+            <a href="https://twitter.com/monbrosimracing" target="_blank" class="text-light"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/monbrosimracing/?hl=es" target="_blank" class="text-light"><i class="fab fa-instagram"></i></a>
+            <a href="./html/contact.html" class="text-light"><i class="fa-solid fa-envelope"></i></a>
+          </div>
+          <div class="fm__footer__container__logo col-md-4 mb-4 d-none d-md-block d-flex justify-content-center align-items-center">
+            <img src="./assets/logo.png" alt="Logo" class="img-fluid">
+          </div>
         </div>
-        <div class="footer-element footer-links d-flex flex-column justify-content-center align-items-center">
-            <h2 class="links-social">LINKS</h2>
-          <a href="https://twitter.com/monbrosimracing" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.instagram.com/monbrosimracing/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a>
-          <a href="./html/contact.html" ><i class="fa-solid fa-envelope" target="_blank"></i></a>
-        </div>
-        <div class="footer-element footer-logo">
-            <img src="./assets/logo.png">
-        </div>  
-        <div class="footer-element footer-copyright d-flex justify-content-center align-items-end ">
-            <p> Copyright © Francisco Montini - 2024</p>
+        <div class="row">
+          <div class="fm__footer__container__copyright col-md-12 text-center">
+            <p class="mb-0">Copyright © Francisco Montini - 2024</p>
+          </div>
         </div>
       </div>
     </footer>
