corregido version mobile faq  y contact ajuste mobile

--- a/html/faq.html
+++ b/html/faq.html
@@ -46,11 +46,11 @@
     </header>
 
     <main>
-
+      <h1 class="fm__h1-main display-4">PREGUNTAS FRECUENTES</h1>
       <section class="container fm__faq__container">
-        <h1 class="p-5 text-center fm__h1-main">PREGUNTAS FRECUENTES</h1>
-        <div class="accordion p-5" id="accordionExample">
-
+        
+        <div class="accordion pb-5 fm__faq__container__accordion" id="accordionExample">
+        
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
