fix contact mobile

--- a/html/contact.html
+++ b/html/contact.html
@@ -49,7 +49,7 @@
 
       <div class="container-fluid fm__contact_container">
         <div class="row row__form justify-content-evenly align-items-center ">
-            <div class="fm__contact__container__info col-md-4">
+            <div class="fm__contact__container__info col-md-3 col-sm-12">
               <ul class="fm__contact__container__info__list">
                   <h2 class="fm__contact__container__info__list--title"><b>Contacto</b></h2>
                   <li class="fm__contact__container__info__list--li"><b>Telefono:</b> 11-6682-****</li>
@@ -57,7 +57,7 @@
                   <li class="fm__contact__container__info__list--li"><b>E-mail:</b> monbrosimracing@gmail.com</li>
               </ul>
             </div>
-            <div class="fm__contact__container__form col-md-6">
+            <div class="fm__contact__container__form col-md-6 col-sm-12">
                 <form action="form.php" method="post">
                     <h2 class="fm__contact__container__form--h2"> CONTACTANOS</h2>
                     <p class="fm__contact__container__form--description">Si tenes alguna duda, pedido o sugerencia completa el formulario y nos pondremos
@@ -80,7 +80,7 @@
                     <input type="submit" class="form-submit">
                 </form>
             </div>
-            <div class="fm__contact__container__image d-none d-sm-block col-md-1">
+            <div class="fm__contact__container__image d-none d-xl-block col-md-3">
               <img src="../assets/headset-contact.png" alt="headset">
             </div>
           </div>  
