--- a/html/contact.html
+++ b/html/contact.html
@@ -2,124 +2,133 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Francisco Montini">
-	<meta name="copyright" content="Francisco Montini">
-    <meta name="description" content="Cockpits de aluminio para simracing">
-    <link rel="icon" href="./assets/LOGO.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap" rel="stylesheet">
-    <title>MONBRO-PRODUCTOS</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Francisco Montini">
+  <meta name="copyright" content="Francisco Montini">
+  <meta name="description" content="Cockpits de aluminio para simracing">
+  <link rel="icon" href="./assets/LOGO.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="../css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
+    rel="stylesheet">
+  <title>MONBRO-PRODUCTOS</title>
 </head>
 
 <body>
-    
-    <header class="fm__header-container">
-        <nav class="navbar navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
-            <div class="container">
-              <a class="navbar-brand" href="../index.html">
-                <img src="../assets/banner.png" alt="Bootstrap" width="400" height="150">
-              </a>
-            </div>  
-        </nav>
-        <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
-          <div class="container">
-            <div class="container-fluid">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                  <a class="nav-link" href="./products.html">Productos</a>
-                  <a class="nav-link" href="./faq.html">FAQ</a>
-                  <a class="nav-link" href="./contact.html">Contacto</a>
-                  <a class="nav-link" href="./about-us.html">Nosotros</a>
-                </div>
+
+  <header class="fm__header-container">
+    <nav class="navbar navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
+      <div class="container">
+        <a class="navbar-brand" href="../index.html">
+          <img src="../assets/banner.png" alt="Bootstrap" width="400" height="150">
+        </a>
+      </div>
+    </nav>
+    <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
+      <div class="container">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" href="./products.html">Productos</a>
+              <a class="nav-link" href="./faq.html">FAQ</a>
+              <a class="nav-link" href="./contact.html">Contacto</a>
+              <a class="nav-link" href="./about-us.html">Nosotros</a>
+            </div>
+          </div>
+        </div>
+    </nav>
+  </header>
+
+  <main class="fm__Main__contact">
+
+    <div class="container-fluid fm__contact_container">
+      <div class="row row__form justify-content-evenly align-items-center ">
+        <div class="fm__contact__container__info col-md-3 col-sm-12">
+          <ul class="fm__contact__container__info__list">
+            <h2 class="fm__contact__container__info__list--title"><b>Contacto</b></h2>
+            <li class="fm__contact__container__info__list--li"><b>Telefono:</b> 11-6682-****</li>
+            <li class="fm__contact__container__info__list--li"><b>Dirección:</b> Calle Falsa 123 CABA</li>
+            <li class="fm__contact__container__info__list--li"><b>E-mail:</b> monbrosimracing@gmail.com</li>
+          </ul>
+        </div>
+        <div class="fm__contact__container__form col-md-6 col-sm-12">
+          <form action="form.php" method="post">
+            <h2 class="fm__contact__container__form--h2"> CONTACTANOS</h2>
+            <p class="fm__contact__container__form--description">Si tenes alguna duda, pedido o sugerencia completa el
+              formulario y nos pondremos
+              en contacto
+            </p>
+            <div class="form-container">
+              <div class="form-group">
+                <label for="nombre">Nombre</label>
+                <input type="text" id="nombre" class="form-input" placeholder="nombre">
               </div>
             </div>
-        </nav>
-    </header>
-
-    <main class="fm__Main__contact">
-
-      <div class="container-fluid fm__contact_container">
-        <div class="row row__form justify-content-evenly align-items-center ">
-            <div class="fm__contact__container__info col-md-3 col-sm-12">
-              <ul class="fm__contact__container__info__list">
-                  <h2 class="fm__contact__container__info__list--title"><b>Contacto</b></h2>
-                  <li class="fm__contact__container__info__list--li"><b>Telefono:</b> 11-6682-****</li>
-                  <li class="fm__contact__container__info__list--li"><b>Dirección:</b> Calle Falsa 123 CABA</li>
-                  <li class="fm__contact__container__info__list--li"><b>E-mail:</b> monbrosimracing@gmail.com</li>
-              </ul>
+            <div class="form-group">
+              <label for="email">e-mail</label>
+              <input type="email" id="email" class="form-input" placeholder="e-mail">
             </div>
-            <div class="fm__contact__container__form col-md-6 col-sm-12">
-                <form action="form.php" method="post">
-                    <h2 class="fm__contact__container__form--h2"> CONTACTANOS</h2>
-                    <p class="fm__contact__container__form--description">Si tenes alguna duda, pedido o sugerencia completa el formulario y nos pondremos
-                        en contacto
-                    </p>
-                    <div class="form-container">
-                        <div class="form-group">
-                            <label for="nombre">Nombre</label>
-                            <input type="text" id="nombre" class="form-input" placeholder="nombre">
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">e-mail</label>
-                        <input type="email" id="email" class="form-input" placeholder="e-mail">
-                    </div>
-                    <div class="form-group">
-                        <label for="mensaje">Mensaje</label>
-                        <textarea type="text" id="mensaje" class="form-text_area" placeholder="mensaje"></textarea> 
-                    </div>
-                    <input type="submit" class="form-submit">
-                </form>
+            <div class="form-group">
+              <label for="mensaje">Mensaje</label>
+              <textarea type="text" id="mensaje" class="form-text_area" placeholder="mensaje"></textarea>
             </div>
-            <div class="fm__contact__container__image d-none d-xl-block col-md-3">
-              <img src="../assets/headset-contact.png" alt="headset">
-            </div>
-          </div>  
-          </div>
+            <input type="submit" class="form-submit">
+          </form>
+        </div>
+        <div class="fm__contact__container__image d-none d-xl-block col-md-3">
+          <img src="../assets/headset-contact.png" alt="headset">
         </div>
       </div>
-        
-    </main>
+    </div>
+    </div>
+    </div>
 
-    <footer>
-      <div class="container-fluid fm__footer__container">
-        <div class="row">
-          <div class="fm__footer__container__email col-md-4 mb-4 d-flex flex-column align-items-center">
-            <h2>E-MAIL</h2>
-            <a href="mailto:monbrosimracing@mail.com" class="text-light">monbrosimracing@gmail.com</a>
-          </div>
-          <div class="fm__footer__container__links col-md-4 mb-4 d-flex flex-column align-items-center">
-            <h2>LINKS</h2>
-            <a href="https://twitter.com/monbrosimracing" target="_blank" class="text-light"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/monbrosimracing/?hl=es" target="_blank" class="text-light"><i class="fab fa-instagram"></i></a>
-            <a href="../html/contact.html" class="text-light"><i class="fa-solid fa-envelope"></i></a>
-          </div>
-          <div class="fm__footer__container__logo col-md-4 mb-4 d-none d-md-block d-flex justify-content-center align-items-center">
-            <img src="../assets/logo.png" alt="Logo" class="img-fluid">
-          </div>
+  </main>
+
+  <footer>
+    <div class="container-fluid fm__footer__container">
+      <div class="row">
+        <div class="fm__footer__container__email col-md-4 mb-4 d-flex flex-column align-items-center">
+          <h2>E-MAIL</h2>
+          <a href="mailto:monbrosimracing@mail.com" class="text-light">monbrosimracing@gmail.com</a>
         </div>
-        <div class="row">
-          <div class="fm__footer__container__copyright col-md-12 text-center">
-            <p class="mb-0">Copyright © Francisco Montini - 2024</p>
-          </div>
+        <div class="fm__footer__container__links col-md-4 mb-4 d-flex flex-column align-items-center">
+          <h2>LINKS</h2>
+          <a href="https://twitter.com/monbrosimracing" target="_blank" class="text-light"><i
+              class="fab fa-twitter"></i></a>
+          <a href="https://www.instagram.com/monbrosimracing/?hl=es" target="_blank" class="text-light"><i
+              class="fab fa-instagram"></i></a>
+          <a href="../html/contact.html" class="text-light"><i class="fa-solid fa-envelope"></i></a>
+        </div>
+        <div
+          class="fm__footer__container__logo col-md-4 mb-4 d-none d-md-block d-flex justify-content-center align-items-center">
+          <img src="../assets/logo.png" alt="Logo" class="img-fluid">
         </div>
       </div>
-    </footer>
-  
-  
-      <!-- script bootrstap-->   
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-      <!--script iconos -->
-      <script src="https://kit.fontawesome.com/e0c985936e.js" crossorigin="anonymous"></script>
+      <div class="row">
+        <div class="fm__footer__container__copyright col-md-12 text-center">
+          <p class="mb-0">Copyright © Francisco Montini - 2024</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+
+  <!-- script bootrstap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <!--script iconos -->
+  <script src="https://kit.fontawesome.com/e0c985936e.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
