--- a/html/about-us.html
+++ b/html/about-us.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
   <title>MONBRO-PRODUCTOS</title>
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
         <a class="navbar-brand" href="../index.html">
-          <img src="../assets/banner.png" alt="Bootstrap" width="400" height="150">
+          <img src="../assets/banner.png" alt="logo-monbro" width="400" height="150">
         </a>
       </div>
     </nav>
@@ -51,8 +51,8 @@
   <main>
 
     <div class="container fm__us-container">
-      <div class="fm__h1-main">
-        <h1>BIENVENIDOS a MONBRO!</h1>
+      <div>
+        <h1 class="fm__h1">Bienvenidos a MONBRO!</h1>
       </div>
       <section class="fm__us-container__section">
         <article class="fm__us-container__section__article p-3">
