--- a/html/contact.html
+++ b/html/contact.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
   <title>MONBRO-PRODUCTOS</title>
@@ -24,7 +24,7 @@
     <nav class="navbar navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
         <a class="navbar-brand" href="../index.html">
-          <img src="../assets/banner.png" alt="Bootstrap" width="400" height="150">
+          <img src="../assets/banner.png" alt="logo-monbro" width="400" height="150">
         </a>
       </div>
     </nav>
@@ -62,8 +62,8 @@
         </div>
         <div class="fm__contact__container__form col-md-6 col-sm-12">
           <form action="form.php" method="post">
-            <h2 class="fm__contact__container__form--h2"> CONTACTANOS</h2>
-            <p class="fm__contact__container__form--description">Si tenes alguna duda, pedido o sugerencia completa el
+            <h2 class="fm__contact__container__form__h2"> CONTACTANOS</h2>
+            <p class="fm__contact__container__form__description">Si tenes alguna duda, pedido o sugerencia completa el
               formulario y nos pondremos
               en contacto
             </p>
