--- a/html/faq.html
+++ b/html/faq.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../css/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
   <title>MONBRO-PRODUCTOS</title>
@@ -24,7 +24,7 @@
     <nav class="navbar navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
         <a class="navbar-brand" href="../index.html">
-          <img src="../assets/banner.png" alt="Bootstrap" width="400" height="150">
+          <img src="../assets/banner.png" alt="logo-monbro" width="400" height="150">
         </a>
       </div>
     </nav>
@@ -49,7 +49,7 @@
   </header>
 
   <main>
-    <h1 class="fm__h1-main display-4">PREGUNTAS FRECUENTES</h1>
+    <h1 class="fm__h1 display-4">Preguntas Frecuentes</h1>
     <section class="container fm__faq__container">
 
       <div class="accordion pb-5 fm__faq__container__accordion" id="accordionExample">
@@ -92,7 +92,7 @@
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
-            <div class="accordion-body">CSS
+            <div class="accordion-body">
               La ventaja de tener un MONBRO es que se adapta a cualquier periférico del mercado sin tener que hacer
               modificaciones.
             </div>
