--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
   <title>MONBRO</title>
@@ -24,7 +24,7 @@
     <nav class="navbar navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
         <a class="navbar-brand" href="./index.html">
-          <img src="./assets/banner.png" alt="Bootstrap" width="400" height="150">
+          <img src="./assets/banner.png" alt="logo-monbro" width="400" height="150">
         </a>
       </div>
     </nav>
@@ -51,11 +51,10 @@
   <main>
     <div class="container-fluid">
       <div class="row justify-content-center">
-        <h1 class="fm__h1-main col-md-8 col-sm 3 text-align-center m-5">Bienvenidos a una nueva experiencia</h1>
+        <h1 class="fm__h1 col-md-8 col-sm 3 text-align-center m-5">Bienvenidos a una nueva experiencia</h1>
         <!-- "fm__" clase personal-->
       </div>
-      <div id="carouselExampleCaptions" class="carousel slide d-flex justify-content-center"
-        style="padding-bottom: 100px;">
+      <div id="carouselExampleCaptions" class="carousel slide d-flex justify-content-center" style="padding-bottom: 100px;"> <!-- AGREGAR ANIMACION de ANIMATE CSSS PARA CARROUSEL-->
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
