--- a/html/contact.html
+++ b/html/contact.html
@@ -11,8 +11,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/main.css">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> <!-- boostrap -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> <!-- animate-->
+  <link rel="stylesheet" href="../css/main.css"> <!-- css --->
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
   <title>MONBRO-PRODUCTOS</title>
@@ -85,7 +86,7 @@
           </form>
         </div>
         <div class="fm__contact__container__image d-none d-xl-block col-md-3">
-          <img src="../assets/headset-contact.png" alt="headset">
+          <img src="../assets/headset-contact.png" class= "animate__animated animate__flip" alt="headset">
         </div>
       </div>
     </div>
