--- a/html/faq.html
+++ b/html/faq.html
@@ -10,9 +10,9 @@
   <link rel="icon" href="./assets/LOGO.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/main.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"> <!-- boostrap -->
+  <link rel="stylesheet" href="../css/main.css"> <!--css-->
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
   <title>MONBRO-PRODUCTOS</title>
@@ -57,11 +57,11 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
-              aria-expanded="true" aria-controls="collapseOne">
+              aria-expanded="true" aria-controls="collapseOne"> 
               ¿De qué material son las estructuras?
             </button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample"> <!-- elime class "show" para que no se expanda ninguna pregunta-->
             <div class="accordion-body">
               Nuestros cockpits se realizan con perfiles de aluminio de tipo Bosh.
               Las medidas de estos perfiles son 4080 y 4040. Además de los perfiles usamos escuadras y
