--- a/html/products.html
+++ b/html/products.html
@@ -11,8 +11,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/main.css">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"><!-- bootstrap -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> <!-- animate-->
+  <link rel="stylesheet" href="../css/main.css"> <!-- css -->
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
   <title>MONBRO-PRODUCTOS</title>
@@ -54,10 +55,10 @@
     <div class="container-fluid">
       <div class="row justify-content-around"> <!-- agregue justify para poder ubicar las cards -->
         <div class=" fm__cards col-md-3 col-sm-12 m-2"> <!-- "fm_" clases personales-->
-          <div class="card-img">
-            <img src="../assets/basic.png" alt="cockpit-basic">
+          <div class="card-img fm__cards__img">
+            <img src="../assets/basic.png" class="animate__animated animate__slideInLeft" alt="cockpit-basic"> <!-- animate img-->
           </div>
-          <div class="fm__card__description">
+          <div class="fm__cards__description animate__animated animate__fadeInUp"> <!-- animate caption-->
             <h2>BASIC</h2>
             <P>Nuestro modelo <b>BASIC</b> esta construido con perfiles de aluminio tipo bosh lo
               que le da al conjunto una gran resistencia. Las columanas centrales son de perfiles 4080 mientras que el
@@ -65,20 +66,20 @@
           </div>
         </div>
         <div class="fm__cards col-md-3 col-sm-12 m-2">
-          <div class="card-img">
-            <img src="../assets/cockpit - pro.png" alt="cockpit-pro">
+          <div class="card-img fm__cards__img">
+            <img src="../assets/cockpit - pro.png" class= "animate__animated animate__fadeIn" alt="cockpit-pro"> <!-- animate img-->
           </div>
-          <div class="fm__card__description">
+          <div class="fm__cards__description animate__animated animate__fadeInUp"> <!-- animate caption-->
             <h2>PRO</h2>
             <P>El modelo <b>PRO</b> a diferencia del basic esta construido enteramente con
               perfiles 4080. Pensado para bases direct drive de muchos NM y potencia.</P>
           </div>
         </div>
         <div class="fm__cards col-md-3 col-sm-12 m-2">
-          <div class="card-img">
-            <img src="../assets/gt-pro.png" alt="cockpit-gtpro">
+          <div class="card-img fm__cards__img ">
+            <img src="../assets/gt-pro.png" class= "animate__animated animate__slideInRight"alt="cockpit-gtpro"> <!-- animate img-->
           </div>
-          <div class="fm__card__description">
+          <div class="fm__cards__description animate__animated animate__fadeInUp"> <!-- animate caption-->
             <h2>GT-PRO</h2>
             <P>Nuestro producto mas completo, el <b>GT-PRO</b>. Un conjunto robusto,
               totalmente regulable en altura, distancia y en inclinacion. Podes elegir configurarlo tipo GT o Formula,
