--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="./css/main.css">
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"><!-- bootstrap -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/> <!-- animate-->
+  <link rel="stylesheet" href="./css/main.css"> <!-- css -->
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Jaldi:wght@400;700&display=swap"
     rel="stylesheet">
   <title>MONBRO</title>
@@ -48,13 +49,13 @@
     </nav>
   </header>
 
-  <main>
+  <main class="fm__main">
     <div class="container-fluid">
       <div class="row justify-content-center">
-        <h1 class="fm__h1 col-md-8 col-sm 3 text-align-center m-5">Bienvenidos a una nueva experiencia</h1>
+        <h1 class="fm__h1 col-md-8 col-sm 3 text-align-center m-4">Bienvenidos a una nueva experiencia</h1>
         <!-- "fm__" clase personal-->
       </div>
-      <div id="carouselExampleCaptions" class="carousel slide d-flex justify-content-center" style="padding-bottom: 100px;"> <!-- AGREGAR ANIMACION de ANIMATE CSSS PARA CARROUSEL-->
+      <div id="carouselExampleCaptions" class="carousel slide d-flex justify-content-center" style="padding-bottom: 100px;">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
             aria-current="true" aria-label="Slide 1"></button>
@@ -66,9 +67,9 @@
         <div class="carousel-inner w-50">
           <div class="carousel-item active">
             <div>
-              <img src="./assets/basic.png" class="d-block w-100" alt="cokpit-basic">
+              <img src="./assets/basic.png" class="d-block w-100 animate__animated animate__fadeInDown animate__fadeIn" alt="cokpit-basic"> <!-- animación img-->
             </div>
-            <div class="carousel-caption d-none d-md-block">
+            <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp"> <!-- animación caption-->
               <h5>Modelo BASIC</h5>
               <p>Nuestro modelo <b>BASIC</b> esta construido con perfiles de aluminio tipo bosh lo
                 que le da al conjunto una gran resistencia. Las columanas centrales son de perfiles 4080 mientras que el
@@ -76,16 +77,20 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./assets/cockpit - pro.png" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
+            <div>
+            |<img src="./assets/cockpit - pro.png" class="d-block w-100 animate__animated animate__fadeInDown" alt="cockpit-pro"> <!-- animación img-->
+            </div>
+            <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp"> <!-- animación caption-->
               <h5>PRO</h5>
               <p>El modelo <b>PRO</b> a diferencia del basic esta construido enteramente con
                 perfiles 4080. Pensado para bases direct drive de muchos NM y potencia.</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./assets/gt-pro.png" class="d-block w-100" alt="gt-pro">
-            <div class="carousel-caption d-none d-md-block">
+            <div>
+              <img src="./assets/gt-pro.png" class="d-block w-100 animate__animated animate__fadeInDown" alt="gt-pro"> <!-- animación img-->
+            </div>
+            <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp"> <!-- animación caption-->
               <h5>GT-PRO</h5>
               <p>Nuestro producto mas completo, el <b>GT-PRO</b>. Un conjunto robusto,
                 totalmente regulable en altura, distancia y en inclinacion. Podes elegir configurarlo tipo GT o Formula,
