eliminado doble clase navbar

--- a/html/contact.html
+++ b/html/contact.html
@@ -28,9 +28,9 @@
 <body>
 
   <header class="fm__header-container">
-    <nav class="navbar navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
+    <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
-        <a class="navbar-brand" href="../index.html">
+        <a href="../index.html">
           <img src="../assets/banner.png" alt="logo-monbro" width="400" height="150">
         </a>
       </div>
