--- a/html/products.html
+++ b/html/products.html
@@ -28,9 +28,9 @@
 <body>
 
   <header class="fm__header-container">
-    <nav class="navbar navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
+    <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
-        <a class="navbar-brand" href="../index.html">
+        <a href="../index.html">
           <img src="../assets/banner.png" alt="logo-monbro" width="400" height="150">
         </a>
       </div>
@@ -68,7 +68,7 @@
           <div class="fm__cards__description animate__animated animate__fadeInUp"> <!-- animate caption-->
             <h2>BASIC</h2>
             <P>Nuestro modelo <b>BASIC</b> esta construido con perfiles de aluminio tipo bosh lo
-              que le da al conjunto una gran resistencia. Las columanas centrales son de perfiles 4080 mientras que el
+              que le da al conjunto una gran resistencia. Las columnas centrales son de perfiles 4080 mientras que el
               resto es de 4040.</P>
           </div>
         </div>
