--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Francisco Montini">
   <meta name="copyright" content="Francisco Montini">
-  <meta name="description"
-    content="Bienvenidos a MONBRO, acá encontraras todo lo necesario para montar tu simulador de carreras y de vuelo.">
+  <meta name="description" content="Bienvenidos a MONBRO, acá encontraras todo lo necesario para montar tu simulador de carreras y de vuelo.">
   <meta name="keywords" content="simuladores, simracing, carreras, cockpits, aluminio, assetto corsa, iracing, gran turismo, playstation, pc,">
   <link rel="icon" href="./assets/LOGO.ico">
   <!-- fuentes -->
@@ -28,9 +27,9 @@
 <body>
 
   <header class="fm__header-container">
-    <nav class="navbar navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
+    <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
-        <a class="navbar-brand" href="./index.html">
+        <a href="./index.html">
           <img src="./assets/banner.png" alt="logo-monbro" width="400" height="150">
         </a>
       </div>
@@ -80,9 +79,7 @@
             <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
               <!-- animación caption-->
               <h5>Modelo BASIC</h5>
-              <p>Nuestro modelo <b>BASIC</b> esta construido con perfiles de aluminio tipo bosh lo
-                que le da al conjunto una gran resistencia. Las columanas centrales son de perfiles 4080 mientras que el
-                resto es de 4040</p>
+              <p>Nuestro modelo mas economico. <a href="./html/products.html"> <b>Mas info</b> </a></p>
             </div>
           </div>
           <div class="carousel-item">
@@ -93,8 +90,7 @@
             <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
               <!-- animación caption-->
               <h5>PRO</h5>
-              <p>El modelo <b>PRO</b> a diferencia del basic esta construido enteramente con
-                perfiles 4080. Pensado para bases direct drive de muchos NM y potencia.</p>
+              <p>Nuestro modelo intermedio. Resistente y regulable <a href="./html/products.html"> <b>Mas info</b> </a></p>
             </div>
           </div>
           <div class="carousel-item">
@@ -105,9 +101,7 @@
             <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
               <!-- animación caption-->
               <h5>GT-PRO</h5>
-              <p>Nuestro producto mas completo, el <b>GT-PRO</b>. Un conjunto robusto,
-                totalmente regulable en altura, distancia y en inclinacion. Podes elegir configurarlo tipo GT o Formula,
-                de alli su nomenclaura.</p>
+              <p>GT-Pro, pensado para los usuarios mas exigentes. <a href="./html/products.html"> <b>Mas info</b> </a></p>
             </div>
           </div>
         </div>
