--- a/html/about-us.html
+++ b/html/about-us.html
@@ -26,7 +26,7 @@
   <header class="fm__header-container">
     <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
-        <a class="navbar-brand" href="../index.html">
+        <a href="../index.html">
           <img src="../assets/banner.png" alt="logo-monbro" width="400" height="150">
         </a>
       </div>
