--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <meta name="copyright" content="Francisco Montini">
   <meta name="description" content="Bienvenidos a MONBRO, acá encontraras todo lo necesario para montar tu simulador de carreras y de vuelo.">
   <meta name="keywords" content="simuladores, simracing, carreras, cockpits, aluminio, assetto corsa, iracing, gran turismo, playstation, pc,">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="MONBRO Simracing">
+  <meta property="og:url" content="https://monbro-simracing.000webhostapp.com/index.html">
+  <meta property="og:image" content="https://github.com/Fpmontini/3ra-entrega-montini/blob/main/assets/cockpit-gtpro.png?raw=true">
+  <meta property="og:description" content="En MONBRO, cada uno de nuestros cockpits es cuidadosamente elaborado con perfiles de Aluminio tipo Bosh. Desde el diseño inicial hasta el ensamblaje final, nos esforzamos por superar las expectativas de nuestros clientes en términos de durabilidad, modularidad, universalidad, funcionalidad y estilo. Entra a conocernos!">
   <link rel="icon" href="./assets/LOGO.ico">
   <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
