--- a/html/products.html
+++ b/html/products.html
@@ -30,8 +30,8 @@
   <header class="fm__header-container">
     <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
-        <a href="../index.html">
-          <img src="../assets/banner.png" alt="logo-monbro" width="400" height="150">
+        <a class="navbar-brand" href="../index.html">
+          <img src="../assets/banner.webp" alt="logo-monbro" width="400" height="150">
         </a>
       </div>
     </nav>
@@ -62,7 +62,7 @@
       <div class="row justify-content-around"> <!-- agregue justify para poder ubicar las cards -->
         <div class=" fm__cards col-md-3 col-sm-12 m-2"> <!-- "fm_" clases personales-->
           <div class="card-img fm__cards__img">
-            <img src="../assets/basic.png" class="animate__animated animate__slideInLeft" alt="cockpit-basic">
+            <img src="../assets/basic.webp" class="animate__animated animate__slideInLeft" alt="cockpit-basic">
             <!-- animate img-->
           </div>
           <div class="fm__cards__description animate__animated animate__fadeInUp"> <!-- animate caption-->
@@ -74,7 +74,7 @@
         </div>
         <div class="fm__cards col-md-3 col-sm-12 m-2">
           <div class="card-img fm__cards__img">
-            <img src="../assets/cockpit - pro.png" class="animate__animated animate__fadeIn" alt="cockpit-pro">
+            <img src="../assets/cockpit-pro.webp" class="animate__animated animate__fadeIn" alt="cockpit-pro">
             <!-- animate img-->
           </div>
           <div class="fm__cards__description animate__animated animate__fadeInUp"> <!-- animate caption-->
@@ -85,7 +85,7 @@
         </div>
         <div class="fm__cards col-md-3 col-sm-12 m-2">
           <div class="card-img fm__cards__img ">
-            <img src="../assets/gt-pro.png" class="animate__animated animate__slideInRight" alt="cockpit-gtpro">
+            <img src="../assets/gt-pro.webp" class="animate__animated animate__slideInRight" alt="cockpit-gtpro">
             <!-- animate img-->
           </div>
           <div class="fm__cards__description animate__animated animate__fadeInUp"> <!-- animate caption-->
@@ -117,7 +117,7 @@
         </div>
         <div
           class="fm__footer__container__logo col-md-4 mb-4 d-none d-md-block d-flex justify-content-center align-items-center">
-          <img src="../assets/logo.png" alt="Logo" class="img-fluid">
+          <img src="../assets/logo.webp" alt="Logo" class="img-fluid">
         </div>
       </div>
       <div class="row">
