--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Francisco Montini">
   <meta name="copyright" content="Francisco Montini">
-  <meta name="description" content="Bienvenidos a MONBRO, acá encontraras todo lo necesario para montar tu simulador de carreras y de vuelo.">
-  <meta name="keywords" content="simuladores, simracing, carreras, cockpits, aluminio, assetto corsa, iracing, gran turismo, playstation, pc,">
+  <!-- opengraph -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="MONBRO Simracing">
   <meta property="og:url" content="https://monbro-simracing.000webhostapp.com/index.html">
   <meta property="og:image" content="https://github.com/Fpmontini/3ra-entrega-montini/blob/main/assets/cockpit-gtpro.png?raw=true">
   <meta property="og:description" content="En MONBRO, cada uno de nuestros cockpits es cuidadosamente elaborado con perfiles de Aluminio tipo Bosh. Desde el diseño inicial hasta el ensamblaje final, nos esforzamos por superar las expectativas de nuestros clientes en términos de durabilidad, modularidad, universalidad, funcionalidad y estilo. Entra a conocernos!">
+  <meta name="description" content="Bienvenidos a MONBRO, acá encontraras todo lo necesario para montar tu simulador de carreras y de vuelo.">
+  <meta name="keywords" content="simuladores, simracing, carreras, cockpits, aluminio, assetto corsa, iracing, gran turismo, playstation, pc,">
   <link rel="icon" href="./assets/LOGO.ico">
   <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,8 +35,8 @@
   <header class="fm__header-container">
     <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
-        <a href="./index.html">
-          <img src="./assets/banner.png" alt="logo-monbro" width="400" height="150">
+        <a class="navbar-brand"  href="./index.html">
+          <img src="./assets/banner.webp" alt="logo-monbro" width="400" height="150">
         </a>
       </div>
     </nav>
@@ -78,7 +79,7 @@
         <div class="carousel-inner w-50">
           <div class="carousel-item active">
             <div>
-              <img src="./assets/basic.png" class="d-block w-100 animate__animated animate__fadeInDown"
+              <img src="./assets/basic.webp" class="d-block w-100 animate__animated animate__fadeInDown"
                 alt="cokpit-basic"> <!-- animación img-->
             </div>
             <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
@@ -89,7 +90,7 @@
           </div>
           <div class="carousel-item">
             <div>
-              |<img src="./assets/cockpit - pro.png" class="d-block w-100 animate__animated animate__fadeInDown"
+              |<img src="./assets/cockpit-pro.webp" class="d-block w-100 animate__animated animate__fadeInDown"
                 alt="cockpit-pro"> <!-- animación img-->
             </div>
             <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
@@ -100,7 +101,7 @@
           </div>
           <div class="carousel-item">
             <div>
-              <img src="./assets/gt-pro.png" class="d-block w-100 animate__animated animate__fadeInDown" alt="gt-pro">
+              <img src="./assets/gt-pro.webp" class="d-block w-100 animate__animated animate__fadeInDown" alt="gt-pro">
               <!-- animación img-->
             </div>
             <div class="carousel-caption d-none d-md-block animate__animated animate__fadeInUp">
@@ -140,7 +141,7 @@
         </div>
         <div
           class="fm__footer__container__logo col-md-4 mb-4 d-none d-md-block d-flex justify-content-center align-items-center">
-          <img src="./assets/logo.png" alt="Logo" class="img-fluid">
+          <img src="./assets/logo.webp" alt="Logo" class="img-fluid">
         </div>
       </div>
       <div class="row">
