--- a/html/contact.html
+++ b/html/contact.html
@@ -30,8 +30,8 @@
   <header class="fm__header-container">
     <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
-        <a href="../index.html">
-          <img src="../assets/banner.png" alt="logo-monbro" width="400" height="150">
+        <a class="navbar-brand" href="../index.html">
+          <img src="../assets/banner.webp" alt="logo-monbro" width="400" height="150">
         </a>
       </div>
     </nav>
@@ -92,7 +92,7 @@
           </form>
         </div>
         <div class="fm__contact__container__image d-none d-xl-block col-md-3">
-          <img src="../assets/headset-contact.png" class= "animate__animated animate__flip" alt="headset">
+          <img src="../assets/headset-contact.webp" class= "animate__animated animate__flip" alt="headset">
         </div>
       </div>
     </div>
@@ -118,7 +118,7 @@
         </div>
         <div
           class="fm__footer__container__logo col-md-4 mb-4 d-none d-md-block d-flex justify-content-center align-items-center">
-          <img src="../assets/logo.png" alt="Logo" class="img-fluid">
+          <img src="../assets/logo.webp" alt="Logo" class="img-fluid">
         </div>
       </div>
       <div class="row">
