ajustado respondive products.html

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -8,7 +8,7 @@
   <meta name="copyright" content="Francisco Montini">
   <meta name="description" content="Esta es nuestra historia, quienes somos, a donde intentamos llegar y nuestra vision del mundo de los simuladores">
   <meta name="keywords" content="simuladores, cockpits, confianza, historia">
-  <link rel="icon" href="./assets/LOGO.ico">
+  <link rel="icon" href="../assets/LOGO.ico">
   <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
