--- a/html/contact.html
+++ b/html/contact.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Si necesitas ponerte en contacto con nosotros hacelo completando el formulario, vía mail o por nuestro número de contacto. 
     Podes realizar consultas, solicitar presupuestos y realizar cualquier consulta">
   <meta name="keywords" content="CABA, presupuestos, showroom, email, Teléfono">
-  <link rel="icon" href="./assets/LOGO.ico">
+  <link rel="icon" href="../assets/LOGO.ico">
   <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
