--- a/html/products.html
+++ b/html/products.html
@@ -9,7 +9,7 @@
   <meta name="description" content=" Tenemos tres variedades de cockpits que se adaptan a tus necesidades. El modelo Basic, el Pro y el Gt-Pro, cada uno de ellos compatible
     con todos los perifericos del mercado.">
   <meta name="keywords" content="simuladores, simracing, carreras, cockpits, aluminio, assetto corsa, iracing, gran turismo, playstation, pc,">
-  <link rel="icon" href="./assets/LOGO.ico">
+  <link rel="icon" href="../assets/LOGO.ico">
   <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-md"> <!--modifique que se expanda desde md y no lg-->
       <div class="container">
         <a class="navbar-brand" href="../index.html">
-          <img src="../assets/banner.webp" alt="logo-monbro" width="400" height="150">
+          <img src="../assets/banner.webp" alt="logo-monbro"  width="400" height="150">
         </a>
       </div>
     </nav>
