--- a/html/faq.html
+++ b/html/faq.html
@@ -8,7 +8,7 @@
   <meta name="copyright" content="Francisco Montini">
   <meta name="description" content="Tenés alguna duda? Revisa nuestra sección de preguntas frecuentes.">
   <meta name="keywords" content="simuladores, simracing, carreras, cockpits, aluminio, assetto corsa, iracing, gran turismo, playstation, pc,">
-  <link rel="icon" href="./assets/LOGO.ico">
+  <link rel="icon" href="../assets/LOGO.ico">
   <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
